--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ code {
 /* Buttons */
 button.default {
   appearance: none;
-  background-color: #2ea44f;
+  background-color: #2a3953;
   border: 1px solid rgba(27, 31, 35, .15);
   border-radius: 6px;
   box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
@@ -44,7 +44,7 @@ button.default:focus:not(:focus-visible):not(.focus-visible) {
 }
 
 button.default:hover {
-  background-color: #2c974b;
+  background-color: #2a3953;
 }
 
 button.default:focus {
@@ -53,14 +53,14 @@ button.default:focus {
 }
 
 button.default:disabled {
-  background-color: #94d3a2;
+  background-color: #2a3953;
   border-color: rgba(27, 31, 35, .1);
   color: rgba(255, 255, 255, .8);
   cursor: default;
 }
 
 button.default:active {
-  background-color: #298e46;
+  background-color: #2a3953;
   box-shadow: rgba(20, 70, 32, .2) 0 1px 0 inset;
 }
 
@@ -83,3 +83,4 @@ h1, h2, h3, h4 {
   margin-top: 2px;
   margin-bottom: 2px;
 }
+
